--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
+ @mixin flexCol{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+ }
